Fixed some erros regarding the spacing on the right side

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html, body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 110%;
     z-index: -1; 
 }
 
@@ -274,13 +274,16 @@ body {
     justify-content: center;
     padding: 40px 0; 
     gap: 20px; 
-    margin-right: 18%; 
-    margin-left : 18%;
+    margin-right: 0; 
+    margin-left : 0;
 }
 
 .content-wrapper {
     display: flex;
     align-items: center;
+    margin-right: 0; 
+    margin-left : 18%;
+
 }
 
 #grad-pic {
@@ -703,6 +706,22 @@ h2 {
         max-width: 100%; 
         height: 300px; 
     }
+
+    h1 {
+        font-size: 24px;
+        padding:0;
+        margin-bottom:0;
+    }
+
+    .background {
+        position: absolute; 
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 120% !important;
+        z-index: -1; 
+    }
+
 }
 
 
